# grades

./: README.md  document.py  main.py  pyproject.toml  test.json  ui.py  ui.tcss
src/grades/: __init__.py  __main__.py  document.py  schema.json  ui.py  utils.py
